--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           
           </div>
       </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">add</i></a>
+  <a href="#" data-target="slide-out" class="sidenav-trigger waves-effect waves-light btn-large"><i class="material-icons">add</i></a>
   <br>
   <ul id="slide-out2" class="sidenav">
     <li><div class="user-view">
@@ -65,7 +65,7 @@
     <li><a class="subheader">Subheader</a></li>
     <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
   </ul>
-  <a href="#" data-target="slide-out2" class="sidenav-trigger"><i class="material-icons">chat</i></a>
+  <a href="#" data-target="slide-out2" class="sidenav-trigger waves-effect waves-light btn-large"><i class="material-icons">chat</i></a>
       <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
   </html>
