--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper">
-            <a href="index.html"><i class="material-icons left">home</i></a>
+            <a id="" href="index.html"><i class="material-icons left homebutton">home</i></a>
 
             <a href="#" class="brand-logo">Dashboard</a>
             <ul class="right hide-on-med-and-down">
@@ -48,24 +48,50 @@
           
           </div>
       </ul>
-  <a href="#" data-target="slide-out" class="sidenav-trigger waves-effect waves-light btn-large"><i class="material-icons">add</i></a>
+  <a href="#" data-target="slide-out" class="add-btn sidenav-trigger btn-large"><i class="add-icon material-icons">add</i></a>
   <br>
   <ul id="slide-out2" class="sidenav">
-    <li><div class="user-view">
-      <div class="background">
-        <img src="images/office.jpg">
-      </div>
-      <a href="#user"><img class="circle" src="images/yuna.jpg"></a>
-      <a href="#name"><span class="white-text name">John Doe</span></a>
-      <a href="#email"><span class="white-text email">jdandturk@gmail.com</span></a>
-    </div></li>
-    <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-    <li><a href="#!">Second Link</a></li>
-    <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    <div class="row">
+    <div class="col s9 offset-s3">
+      <ul class="chats collection with-header">
+       <li class="collection-header"><h4>Chats</h4></li> 
+      <li class="collection-item avatar">
+        <img src="images/yuna.jpg" alt="" class="circle">
+        <span class="title">Title</span>
+        <p>First Line <br>
+           Second Line
+        </p>
+        <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+      </li>
+      <li class="collection-item avatar">
+        <i class="material-icons circle">folder</i>
+        <span class="title">Title</span>
+        <p>First Line <br>
+           Second Line
+        </p>
+        <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+      </li>
+      <li class="collection-item avatar">
+        <i class="material-icons circle green">insert_chart</i>
+        <span class="title">Title</span>
+        <p>First Line <br>
+           Second Line
+        </p>
+        <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+      </li>
+      <li class="collection-item avatar">
+        <i class="material-icons circle red">play_arrow</i>
+        <span class="title">Title</span>
+        <p>First Line <br>
+           Second Line
+        </p>
+        <a href="#!" class="secondary-content"><i class="material-icons">grade</i></a>
+      </li>
+    </ul>
+    </div>
+    </div>
   </ul>
-  <a href="#" data-target="slide-out2" class="sidenav-trigger waves-effect waves-light btn-large"><i class="material-icons">chat</i></a>
+  <a href="#" data-target="slide-out2" class="add-btn sidenav-trigger btn-large"><i class="add-icon material-icons">chat</i></a>
       <script type="text/javascript" src="js/materialize.min.js"></script>
     </body>
   </html>
